# cmd/ibanator/docs/swagger.json
@@ -23,12 +23,24 @@
                 "summary": "Validates IBAN",
                 "parameters": [
                     {
-                        "description": "AL35202111090000000001234567",
-                        "name": "iban",
+                        "description": "{ ",
+                        "name": "IBANValidationRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/main.IBANValidationRequest"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "iban": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 ],
@@ -74,6 +86,17 @@
         }
     },
     "definitions": {
+        "main.IBANValidationRequest": {
+            "type": "object",
+            "required": [
+                "iban"
+            ],
+            "properties": {
+                "iban": {
+                    "type": "string"
+                }
+            }
+        },
         "main.IBANValidationResponse": {
             "type": "object",
             "properties": {
